# c-cpp-practice

./: .gitignore  README.md
c/: GuessNumber.c
cpp/: CMakeLists.txt  GuessGame.cpp  rand.cpp  student.cpp  students.txt  test.cpp
